--- a/css/styles.css
+++ b/css/styles.css
@@ -472,26 +472,182 @@ Featured Tours
   display:flex;
   align-items: flex-start;
   flex-direction:row;
-
+  flex-wrap:wrap;
+  justify-content:space-between;
+  
 }
 .tour{
-  width:348px;
+  width:350px;
   margin-left:30px;
+  flex-direction:column;
+  background-color:#F1F5F8;
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
+
+}
+
+.date{
+  position: relative;
+  float:right;
+  display:inline;
+  top:-32px;
+  text-align:right;
+  align-self: flex-end;
+  
+  padding:4px 8px;
+  background-color:#88EBF2;
+}
+
+.container{
+  padding:24px 20px 38px 20px;
+}
+
+.tour3{
+  margin-right:30px;
+}
+
+.tour4{
+  margin-bottom:149px;
+}
+
+.bottom-txt{
+  color:#2CAEBA;
+}
+.bottom-txt p{
+  color:#2CAEBA;
+}
+
+.tour h5{
+  text-transform: capitalize;
+  letter-spacing: 4px;
+  font-size:16px;
+  margin-bottom:14px;
+}
+.bottom-cont{
+ 
+  /*display:inline;
+  float:left;*/
+  display:flex;
+  flex-direction:column;
+  flex-wrap:wrap;
+  justify-content:space-around;
+  
+}
+.bottom-txt{
+  display:inline;
+  float:left;
+}
+.bottom-txt p{
+  float:right;
+}
+.bottom-txt i{
+  margin-right:6px;
+}
+.bottom-txt{
+  margin-right:25px;
 }
 /*
 =============== 
 Contact
 ===============
 */
+.contact{
+  background-color:#2CAEBA;
+}
+.contact h4{
+  font-size:28px;
+  letter-spacing:4px;
+  color:white;
+  font-weight:400;
+  padding-top:77px;
+  margin-left:10%;
+}
 
+form{
+  display:flex;
+  flex-wrap:wrap;
+  flex-direction:row;
+  justify-content:flex-start;
+  
+}
+
+input{
+  margin-left:32px;
+  width:20%;
+  margin-top:77px;
+  height:36px;
+  border:none;
+}
+button{
+  margin-right:10%;
+  margin-left:8px;
+  margin-top:77px;
+  height:36px;
+  width:97px;
+  padding:6px 12px;
+  font-size:16px;
+  color:#044E53;
+  background-color:#88EBF2;
+  border:none;
+  letter-spacing:4px;
+  font-family:lato;
+}
+
+form p{
+  margin-top:15px;
+  margin-left:10%;
+  margin-bottom:100px;
+  color:#88EBF2;
+  
+}
 /*
 =============== 
 Gallery
 ===============
 */
+.gallery{
+  display:flex;
+  flex-wrap:wrap;
+  flex-direction:row;
+  justify-content:flex-start;
 
+}
+.gallery img{
+  width:25%;
+}
 /*
 =============== 
 Footer
 ===============
 */
+footer{
+  display:flex;
+  flex-wrap:wrap;
+  justify-items:center;
+  flex-direction:column;
+  align-content:center;
+  align-items: center;
+  background-color:#102A42;
+  
+}
+footer a{
+  margin-top:79px;
+  color: white !important;
+}
+
+.social-icons{
+  color:white;
+  align-self: center;
+  margin-top:39.25px;
+}
+
+.social-icons i:nth-child(2){
+  margin-left:10.34px;
+}
+
+.copyright{
+  margin-top:40.25px;
+  margin-bottom:101px;
+  text-transform: capitalize;
+  color:white;
+  letter-spacing:4px;
+}
